added new play backward forward button

--- a/index.html
+++ b/index.html
@@ -312,8 +312,18 @@
 
 
         </div>
-        <div class="playbar">
-          Playbar
+        <div class="playbar rounded">
+          <div class="songinfo">
+
+          </div>
+          <div class="songbutton">
+            <img src="prevsong.svg" alt="">
+            <img src="play.svg" alt="">
+            <img src="nextsong.svg" alt="">
+          </div>
+          <div class="songtime">
+            
+          </div>
         </div>
       </div>
     </div>
