--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="utility.css">
-  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <title>Document</title>
 </head>
 
@@ -83,9 +82,9 @@
       <div class="playlist">
         <h1>Playlists</h1>
         <div class="cardcontainer">
+          <div class="playlist-grid" id="playlist-grid"></div>
 
-
-          <div class="card">
+          <!-- <div class="card">
             <div class="play">
               <div class="w-10 h-10 flex items-center justify-center bg-green-500 rounded-full">
                 <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
@@ -98,53 +97,33 @@
             <img src="http://127.0.0.1:8080/pictures/8f07a5a9314eeb0b1804e8450f72cc13987edd24.avif" alt="GOT">
             <h2>Game of Thrones</h2>
             <p>Soundtrack</p>
-          </div>
-          <div class="card">
-            <div class="play">
-              <div class="w-10 h-10 flex items-center justify-center bg-green-500 rounded-full">
-                <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                  width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-                  <path fill-rule="evenodd" d="M8.6 5.2A1 1 0 0 0 7 6v12a1 1 0 0 0 1.6.8l8-6a1 1 0 0 0 0-1.6l-8-6Z"
-                    clip-rule="evenodd" />
-                </svg>
-              </div>
-            </div>
-            <img src="http://127.0.0.1:8080/pictures/8f07a5a9314eeb0b1804e8450f72cc13987edd24.avif" alt="GOT">
-            <h2>Game of Thrones</h2>
-            <p>Soundtrack</p>
-          </div>
-
-
-
-        </div>
-        <div class="playbar rounded">
-          <div class="player-container">
-            <div class="controls">
-              <img src="shuffle.svg" alt="">
-              <img src="prevsong.svg" alt="">
-              <img src="play.svg" id="play-button" alt="">
-              <img src="pause.svg" id="pause-button" style="display: none;" alt="">
-              <img src="nextsong.svg" alt="">
-              <img src="repeat.svg" alt="">
-            </div>
-            <div class="timeline">
-              <span id="current-time">0:00</span>
-              <input type="range" id="seek-bar" value="0" min="0" step="1">
-              <span id="duration">0:00</span>
-            </div>
-          </div>
-          
-          <!-- <div class="songbutton">
-            <img src="prevsong.svg" alt="">
-            <img src="play.svg" id="play-button" alt="">
-            <div class="duration" ><span id="duration">0:00</span></div>
-            <img src="pause.svg" id="pause-button" style="display: none;" alt="">
-            <img src="nextsong.svg" alt="">
-          </div>
-          <div class="songtime">
-
           </div> -->
         </div>
+
+        <div class="player-container rounded">
+          <div class="controls">
+            <img src="shuffle.svg" alt="">
+            <img src="prevsong.svg" alt="">
+            <img src="play.svg" id="play-button" alt="">
+            <img src="pause.svg" id="pause-button" style="display: none;" alt="">
+            <img src="nextsong.svg" alt="">
+            <img src="repeat.svg" alt="">
+            <div id="volume-container">
+              <input type="range" id="volume" min="0" max="1" step="0.01" value="1" />
+            </div>
+          </div>
+          <div class="timeline">
+
+            <span id="current-time">0:00</span>
+            <div id="progress-container" style="width: 100%; background: #444; height: 5px; cursor: pointer;">
+              <div id="progress" style="height: 100%; width: 0; background: #1db954;"></div>
+            </div>
+            <span id="duration">0:00</span>
+          </div>
+
+        </div>
+
+
       </div>
     </div>
   </div>
